fixed navbar alignment

--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ body {
     height:auto;
 }
 
+.nav-item{
+  text-align: right;
+}
+
 /*--- header ---*/
 
 .header {
@@ -212,7 +216,7 @@ body {
   background: transparent;
   margin-bottom: 2em;
   background-color: white;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 .imgdiv{
